; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_resident.c_vm_tag_init.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_resident.c_vm_tag_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VM_KERN_MEMORY_FIRST_DYNAMIC = common dso_local global i64 0, align 8
@VM_KERN_MEMORY_ANY = common dso_local global i64 0, align 8
@VM_MAX_TAG_VALUE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @vm_tag_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vm_tag_init() #0 {
  %1 = alloca i64, align 8
  %2 = load i64, i64* @VM_KERN_MEMORY_FIRST_DYNAMIC, align 8
  store i64 %2, i64* %1, align 8
  br label %3

3:                                                ; preds = %10, %0
  %4 = load i64, i64* %1, align 8
  %5 = load i64, i64* @VM_KERN_MEMORY_ANY, align 8
  %6 = icmp slt i64 %4, %5
  br i1 %6, label %7, label %13

7:                                                ; preds = %3
  %8 = load i64, i64* %1, align 8
  %9 = call i32 @vm_tag_free_locked(i64 %8)
  br label %10

10:                                               ; preds = %7
  %11 = load i64, i64* %1, align 8
  %12 = add nsw i64 %11, 1
  store i64 %12, i64* %1, align 8
  br label %3

13:                                               ; preds = %3
  %14 = load i64, i64* @VM_KERN_MEMORY_ANY, align 8
  %15 = add nsw i64 %14, 1
  store i64 %15, i64* %1, align 8
  br label %16

16:                                               ; preds = %23, %13
  %17 = load i64, i64* %1, align 8
  %18 = load i64, i64* @VM_MAX_TAG_VALUE, align 8
  %19 = icmp slt i64 %17, %18
  br i1 %19, label %20, label %26

20:                                               ; preds = %16
  %21 = load i64, i64* %1, align 8
  %22 = call i32 @vm_tag_free_locked(i64 %21)
  br label %23

23:                                               ; preds = %20
  %24 = load i64, i64* %1, align 8
  %25 = add nsw i64 %24, 1
  store i64 %25, i64* %1, align 8
  br label %16

26:                                               ; preds = %16
  ret void
}

declare dso_local i32 @vm_tag_free_locked(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
